--- a/src/pages/Home.css
+++ b/src/pages/Home.css
@@ -1,5 +1,5 @@
 .login-page {
-    --background: #273549; /* light gray-blue background */
+    --background: #273549; 
     display: flex;
     align-items: center;
     justify-content: center;
