--- a/src/pages/Welcome.css
+++ b/src/pages/Welcome.css
@@ -1,22 +1,23 @@
+.welcome-container {
+  text-align: center;
+  padding: 2rem;
+  height: 60%;
+  margin: 1rem;
+  background-color: #151e3f;
+  border-radius: 12px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.15);
+}
 
-   .welcome-container {
-    text-align: center;
-    padding:rem;
-    background-color: #151e3f;
-    margin: 7rem;
-    width: 30rem;
-    height: 30rem;
-    border-radius: 10px;
-    padding: 1rem;
-    
-  
-    
+@media (max-width: 600px) {
+  .welcome-container {
+    padding: 1.2rem;
   }
-  
 
-  p {
-    font-size: 1rem;
-    color: #fff;
-    margin-bottom: 2rem;
+  .welcome-container h1 {
+    font-size: 1.5rem;
   }
-  
+
+  .welcome-container p {
+    font-size: 2rem;
+  }
+}
